--- a/plantsuwa/app/views/admin_pages/index.html.erb
+++ b/plantsuwa/app/views/admin_pages/index.html.erb
@@ -34,7 +34,7 @@
 			<div class="admin-pages-box apb-3">
 
 				<div class="admin-page-heading">
-					<i class="fa fa-users"></i>&nbsp;&nbsp;Plants&nbsp;&nbsp;<span style="color: #777">(<%= @current_plants_count %>)
+					<i class="fa fa-tree"></i>&nbsp;&nbsp;Plants&nbsp;&nbsp;<span style="color: #777">(<%= @current_plants_count %>)
 				</div>
 				
 			</div>
