--- a/plantsuwa/app/views/admin_pages/_other_tables_list.html.erb
+++ b/plantsuwa/app/views/admin_pages/_other_tables_list.html.erb
@@ -1,66 +1,111 @@
 
 <% if controller_name != "notifications" %>  
-  <li><%= link_to 'Notifications', notifications_path %></li>
+  <li>
+      <%= link_to notifications_path do %>
+      <i class="fa fa-bell"></i><span class="admin-list-name">&nbsp;Notifications</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Notifications</li>
+  <li class="li-current"><i class="fa fa-bell"></i>&nbsp;Notifications</li>
 <% end %>
 
 <% if controller_name != "users" %>
-  <li><%= link_to 'Users', users_path %></li>
+  <li>
+      <%= link_to users_path do %>
+      <i class="fa fa-users"></i><span class="admin-list-name">&nbsp;Users</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Users</li>
+  <li class="li-current"><i class="fa fa-users"></i>&nbsp;Users</li>
 <% end %>
 
-<div class="under-768"><li class="divider"></li></div>
-<li class="over-768" style="color: #bbb">|</li>
-
-<li><%= link_to 'Plants', current_plants_path %></li>
+<% if controller_name != "current_plants" %>
+  <li>
+      <%= link_to current_plants_path do %>
+      <i class="fa fa-tree"></i><span class="admin-list-name">&nbsp;Plants</span>
+      <% end %>
+  </li>
+<% else %>
+  <li class="li-current"><i class="fa fa-tree"></i>&nbsp;Plants</li>
+<% end %>
 
 <% if controller_name != "current_photos" %>
-  <li><%= link_to 'Photos', types_path %></li>
+  <li>
+      <%= link_to types_path do %>
+      <i class="fa fa-photo"></i><span class="admin-list-name">&nbsp;Photos</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Photos</li>
+  <li class="li-current"><i class="fa fa-photo"></i>&nbsp;Photos</li>
 <% end %>
 
 <% if controller_name != "climates" %>
-  <li><%= link_to 'Climates', climates_path %></li>
+  <li>
+      <%= link_to climates_path do %>
+      <i class="fa fa-cloud"></i><span class="admin-list-name">&nbsp;Climates</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Climates</li>
+  <li class="li-current"><i class="fa fa-cloud"></i>&nbsp;Climates</li>
 <% end %>
 
 <% if controller_name != "flower_colours" %>
-  <li><%= link_to 'Flower Colours', flower_colours_path %></li>
+  <li>
+      <%= link_to flower_colours_path do %>
+      <i class="fa fa-adjust"></i><span class="admin-list-name">&nbsp;F. Colours</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Flower Colours</li>
+  <li class="li-current"><i class="fa fa-adjust"></i>&nbsp;F. Colours</li>
 <% end %>
 
 <% if controller_name != "leaf_colours" %>
-  <li><%= link_to 'Leaf Colours', leaf_colours_path %></li>
+  <li>
+      <%= link_to leaf_colours_path do %>
+      <i class="fa fa-leaf"></i><span class="admin-list-name">&nbsp;L. Colours</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Leaf Colours</li>
+  <li class="li-current"><i class="fa fa-leaf"></i>&nbsp;L. Colours</li>
 <% end %>
 
 <% if controller_name != "origins" %>
-  <li><%= link_to 'Origins', origins_path %></li>
+  <li>
+      <%= link_to origins_path do %>
+      <i class="fa fa-globe"></i><span class="admin-list-name">&nbsp;Origins</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Origins</li>
+  <li class="li-current"><i class="fa fa-globe"></i>&nbsp;Origins</li>
 <% end %>
 
 <% if controller_name != "sizes" %>
-  <li><%= link_to 'Sizes', sizes_path %></li>
+  <li>
+      <%= link_to sizes_path do %>
+      <i class="fa fa-arrows-h"></i><span class="admin-list-name">&nbsp;Sizes</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Sizes</li>
+  <li class="li-current"><i class="fa fa-arrows-h"></i>&nbsp;Sizes</li>
 <% end %>
 
 <% if controller_name != "soil_types" %>
-  <li><%= link_to 'Soil Types', soil_types_path %></li>
+  <li>
+      <%= link_to soil_types_path do %>
+      <i class="fa fa-tint"></i><span class="admin-list-name">&nbsp;Soil Types</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Soil Types</li>
+  <li class="li-current"><i class="fa fa-tint"></i>&nbsp;Soil Types</li>
 <% end %>
 
 <% if controller_name != "types" %>
-  <li><%= link_to 'Types', types_path %></li>
+  <li>
+      <%= link_to types_path do %>
+      <i class="fa fa-cubes"></i><span class="admin-list-name">&nbsp;Types</span>
+      <% end %>
+  </li>
 <% else %>
-  <li class="li-current">Types</li>
+  <li class="li-current"><i class="fa fa-cubes"></i>&nbsp;Types</li>
 <% end %>
 
