--- a/plantsuwa/app/views/origins/index.html.erb
+++ b/plantsuwa/app/views/origins/index.html.erb
@@ -3,8 +3,10 @@
 <% provide(:prev_link, admin_path) %>
 
 
-	<h1 class="h1-shrink">All Origins<span class="item-counter">(<%= @origins.count %>)</span></h1>
-		<%= link_to '<i class="fa fa-plus"></i>&nbsp;&nbsp;New origin'.html_safe, new_origin_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: -45px'%>
+	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All Origins<span class="item-counter">(<%= @origins.count %>)</span></h1>
+	<%= link_to new_origin_path, class: 'btn btn-orange button-shrink button-admin-new' do %>
+		<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> Origin</span>
+	<% end %>
 <hr/>
 
 
