--- a/plantsuwa/app/views/sizes/edit.html.erb
+++ b/plantsuwa/app/views/sizes/edit.html.erb
@@ -1,7 +1,10 @@
-<h1> Edit Size </h1>
+<% provide(:title, 'Edit Size') %>
+<% provide(:prev_page, 'Sizes') %>
+<% provide(:prev_link, sizes_path) %>
 
-<strong>Note that these changes be applied to all plants with this size.</strong>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Sizes', sizes_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @size.name %>'</h1>
+<hr/>
+
+<strong>Note that these changes will be applied to all plants with this size.</strong>
 
 <%= render 'form' %>
- 
-<%= link_to 'Back', sizes_path, class: 'btn-primary' %>
