--- a/plantsuwa/app/views/sizes/index.html.erb
+++ b/plantsuwa/app/views/sizes/index.html.erb
@@ -1,21 +1,24 @@
-<h1>Listing Sizes</h1>
+<% provide(:title, 'Sizes List') %>
+<% provide(:prev_page, 'Admin') %>
+<% provide(:prev_link, admin_path) %>
 
-<%= link_to 'New Size', new_size_path %>
 
-<table>
-	<tr>
-		<th>ID</th>
-		<th>Name</th>
-	</tr>
+	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All Sizes<span class="item-counter">(<%= @sizes.count %>)</span></h1>
+		<%= link_to new_size_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: -45px' do %>
+			<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> Size</span>
+		<% end %>
+<hr/>
+
+
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th style="width: 5%">ID</th>
+			<th>Name</th>
+			<th style="width: 90px;" class="th-shrink"></th>
+			<th style="width: 90px;" class="th-shrink"></th>
+		</tr>
+	</thead>
 	
-	<% @sizes.each do |size| %>
-	<tr>
-		<td>#<%= size.id %></td>
-		<td><%= size.name %></td>
-		<td><%= link_to 'Edit', edit_size_path(size) %></td>
-		<td><%= link_to 'Delete', size_path(size), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this Size? Doing so will affect all plants with this size!'} %></td>
-	</tr>
-	<% end %>
+	<%= render @sizes %>
 </table>
-<br>
-<strong>Total Number of Sizes: </strong><%= @sizes.count %>
