--- a/plantsuwa/app/views/sizes/new.html.erb
+++ b/plantsuwa/app/views/sizes/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Size</h1>
+<% provide(:title, 'New Size') %>
+<% provide(:prev_page, 'Sizes') %>
+<% provide(:prev_link, sizes_path) %>
+
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Sizes', sizes_path %> <i class="fa fa-chevron-right"></i></span> New Size</h1>
+<hr/>
  
 <%= render 'form' %>
- 
-<%= link_to 'Back', sizes_path %>
