--- a/plantsuwa/app/views/soil_types/_form.html.erb
+++ b/plantsuwa/app/views/soil_types/_form.html.erb
@@ -1,7 +1,8 @@
-<%= simple_form_for(@soil_type, html: { class: 'form-horizontal' }) do |f| %>
+<%= simple_form_for(@soil_type, html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
   <% if @soil_type.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@soil_type.errors.count, "error") %> prohibited this soil_type from being saved:</h2>
+    <br/>
+    <h4><%= pluralize(@soil_type.errors.count, "error") %> prohibited this soil type from being saved:</h4>
     <ul>
     <% @soil_type.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
@@ -11,10 +12,8 @@
   <% end %>
   
   <fieldset>
-	  <%= f.input  :name, hint: 'Aim to capture all possible types in about 5-10 different categories.' %>
+	  <%= f.input  :name, hint: 'Aim to capture all possible types in about 5-10 different categories.', autofocus: true %>
   </fieldset> 
- <br>
-  <p>
-    <%= f.submit %>
-  </p>
+  <hr/>
+  <%= f.submit class: 'btn btn-orange' %>
 <% end %>
