--- a/plantsuwa/app/views/soil_types/edit.html.erb
+++ b/plantsuwa/app/views/soil_types/edit.html.erb
@@ -1,7 +1,10 @@
-<h1> Edit Soil Type </h1>
+<% provide(:title, 'Edit Soil Type') %>
+<% provide(:prev_page, 'Soil Types') %>
+<% provide(:prev_link, soil_types_path) %>
 
-<strong>Note that these changes be applied to all plants with this soil Soil Typetype.</strong>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Soil Types', soil_types_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @soil_type.name %>'</h1>
+<hr/>
+
+<strong>Note that these changes will be applied to all plants with this soil type.</strong>
 
 <%= render 'form' %>
- 
-<%= link_to 'Back', soil_types_path, class: 'btn-primary' %>
