--- a/plantsuwa/app/views/soil_types/new.html.erb
+++ b/plantsuwa/app/views/soil_types/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Soil Type</h1>
+<% provide(:title, 'New Soil Type') %>
+<% provide(:prev_page, 'Soil Types') %>
+<% provide(:prev_link, soil_types_path) %>
+
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Soil Types', soil_types_path %> <i class="fa fa-chevron-right"></i></span> New Climate</h1>
+<hr/>
  
 <%= render 'form' %>
- 
-<%= link_to 'Back', soil_types_path %>
