--- a/plantsuwa/app/views/types/index.html.erb
+++ b/plantsuwa/app/views/types/index.html.erb
@@ -1,21 +1,24 @@
-<h1>Listing Types</h1>
+<% provide(:title, 'Types List') %>
+<% provide(:prev_page, 'Admin') %>
+<% provide(:prev_link, admin_path) %>
 
-<%= link_to 'New Type', new_type_path %>
 
-<table>
-	<tr>
-		<th>ID</th>
-		<th>Name</th>
-	</tr>
+	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All Types<span class="item-counter">(<%= @types.count %>)</span></h1>
+		<%= link_to new_type_path, class: 'btn btn-orange button-shrink button-admin-new' do %>
+			<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> Type</span>
+		<% end %>
+<hr/>
+
+
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th style="width: 5%">ID</th>
+			<th>Name</th>
+			<th style="width: 90px;" class="th-shrink"></th>
+			<th style="width: 90px;" class="th-shrink"></th>
+		</tr>
+	</thead>
 	
-	<% @types.each do |type| %>
-	<tr>
-		<td>#<%= type.id %></td>
-		<td><%= type.name %></td>
-		<td><%= link_to 'Edit', edit_type_path(type) %></td>
-		<td><%= link_to 'Delete', type_path(type), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this Type? Doing so will affect all plants with this type!'} %></td>
-	</tr>
-	<% end %>
+	<%= render @types %>
 </table>
-<br>
-<strong>Total Number of Types: </strong><%= @types.count %>
