--- a/plantsuwa/app/views/types/new.html.erb
+++ b/plantsuwa/app/views/types/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Type</h1>
+<% provide(:title, 'New Type') %>
+<% provide(:prev_page, 'Types') %>
+<% provide(:prev_link, types_path) %>
+
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> New Type</h1>
+<hr/>
  
 <%= render 'form' %>
- 
-<%= link_to 'Back', types_path %>
