--- a/plantsuwa/app/views/layouts/admin_layout.html.erb
+++ b/plantsuwa/app/views/layouts/admin_layout.html.erb
@@ -31,8 +31,20 @@
     <div class="container">
       <div style="height: 64px"></div>
         <div class="padding-mobile">
+
+          <% if flash[:success] %>
+            <div class="alert alert-orange" id="admin-alert-box">
+                <p style="display: inline">
+                  <i class="fa fa-info-circle"></i>&nbsp;&nbsp;&nbsp;<%= flash[:success] %>
+                  <span style="float: right" class="alert-close-button" onclick="document.getElementById('admin-alert-box').style.display='none'"><i class="fa fa-lg fa-times"></i></span>
+                </p>
+                
+            </div>
+          <% end %>
+
+
           <%= yield %>
-          <div style="height: 40px"></div>
+          <div style="height: 42px"></div>
         </div>
       </div>
     </div>
