--- a/plantsuwa/app/views/soil_types/show.html.erb
+++ b/plantsuwa/app/views/soil_types/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @soil_type.name) %>
 <% provide(:prev_page, 'Soil Types') %>
-<% provide(:prev_link, soil_types_path) %> <!-- Change later -->
+<% provide(:prev_link, soil_types_path) %>
 
 
 	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Soil Types', soil_types_path %> <i class="fa fa-chevron-right"></i></span> <%= @soil_type.name %></h1>
