--- a/plantsuwa/app/views/climates/edit.html.erb
+++ b/plantsuwa/app/views/climates/edit.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Climates') %>
 <% provide(:prev_link, climates_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Climates', climates_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @climate.name %>'</h1>
+<h1><span class="preceding-heading"><%= link_to 'Climates', climates_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @climate.name %>'</h1>
 <hr/>
 
 <strong>Note that these changes will be applied to all plants with this climate.</strong>
