--- a/plantsuwa/app/views/climates/show.html.erb
+++ b/plantsuwa/app/views/climates/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @climate.name) %>
 <% provide(:prev_page, 'Climates') %>
-<% provide(:prev_link, climates_path) %> <!-- Change later -->
+<% provide(:prev_link, climates_path) %>
 
 
 	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Climates', climates_path %> <i class="fa fa-chevron-right"></i></span> <%= @climate.name %></h1>
