--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -35,15 +35,10 @@
 		  <ul class="nav navbar-nav navbar-right">
 
 			  <% if signed_in? %>
-				  <li><%= link_to log_out_path, method: "delete" do %>
-	            	<% if is_admin?%>
-	            		Logged in as <span style="color: #FFB300"><i class="fa fa-star"></i>&nbsp;<%= current_user.username %></span> (Log out)
-	            	<% elsif is_trusted? %>
-	            		Logged in as <span style="color: #268BFF"><i class="fa fa-star-half"></i>&nbsp;<%= current_user.username %></span> (Log out)
-	            	<% else %>
-	            		Logged in as <%= current_user.username %></span> (Log out)
-	            	<% end %>
-	            <% end %>
+				  <li>
+				  	<%= link_to log_out_path, method: "delete" do %>
+         			Logged in as <%= formatted_username(current_user) %></span> (Log out)
+         		<% end %>
 	        </li>
 	      <% else %>
 	        <li><%= link_to 'Sign up', sign_up_path %></li>
