--- a/plantsuwa/app/views/leaf_colours/edit.html.erb
+++ b/plantsuwa/app/views/leaf_colours/edit.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Leaf Colour') %>
 <% provide(:prev_link, leaf_colours_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> Edit '<div class="colour-circle circle-large" style="background: <%= (@leaf_colour.name).gsub(/\s+/, '') %>"></div> <%= @leaf_colour.name %>'</h1>
+<h1><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> Edit '<div class="colour-circle circle-large" style="background: <%= to_colour(@leaf_colour) %>"></div> <%= @leaf_colour.name %>'</h1>
 <hr/>
 
 <strong>Note that these changes will be applied to all plants with this leaf colour.</strong>
