--- a/plantsuwa/app/views/leaf_colours/index.html.erb
+++ b/plantsuwa/app/views/leaf_colours/index.html.erb
@@ -19,7 +19,13 @@
 			<th style="width: 90px;" class="th-shrink"></th>
 		</tr>
 	</thead>
-	
-	<%= render @leaf_colours %>
+	<tbody>
+		<%= render @leaf_colours %>
+	</tbody>
 </table>
 
+<div class="center-wrapper">
+	<div class="center-wrapper-inner">
+		<%= will_paginate @leaf_colours, :container => false, :previous_label => '<i class="fa fa-chevron-circle-left"></i>&nbsp;Previous'.html_safe, :next_label => 'Next&nbsp;<i class="fa fa-chevron-circle-right"></i>'.html_safe, renderer: BootstrapPagination::Rails %>
+	</div>
+</div>
