--- a/plantsuwa/app/views/leaf_colours/new.html.erb
+++ b/plantsuwa/app/views/leaf_colours/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Leaf Colours') %>
 <% provide(:prev_link, leaf_colours_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> New Leaf Colour</h1>
+<h1><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> New Leaf Colour</h1>
 <hr/>
  
 <%= render 'form' %>
