--- a/plantsuwa/app/views/leaf_colours/show.html.erb
+++ b/plantsuwa/app/views/leaf_colours/show.html.erb
@@ -3,7 +3,7 @@
 <% provide(:prev_link, leaf_colours_path) %> <!-- Change later -->
 
 
-	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> <div class="colour-circle circle-large" style="background: <%= (@leaf_colour.name).gsub(/\s+/, '') %>"></div><%= @leaf_colour.name %></h1>
+	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> <div class="colour-circle circle-large" style="background: <%= to_colour(@leaf_colour) %>"></div><%= @leaf_colour.name %></h1>
 		<div class="btn-group">
 
 			<%= link_to edit_leaf_colour_path(@leaf_colour), class: 'btn-top btn btn-orange button-shrink', style: 'float: left;' do %>
