--- a/plantsuwa/app/views/notifications/edit.html.erb
+++ b/plantsuwa/app/views/notifications/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing notification</h1>
+<% provide(:title, 'Edit Notification') %>
+<% provide(:prev_page, 'Notifications') %>
+<% provide(:prev_link, notifications_path) %>
+
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Notifications', notifications_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @notification.name %>'</h1>
+<hr/>
+
+<strong>Note that these changes will be applied to all plants with this notification.</strong>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @notification %> |
-<%= link_to 'Back', notifications_path %>
