--- a/plantsuwa/app/views/notifications/index.html.erb
+++ b/plantsuwa/app/views/notifications/index.html.erb
@@ -1,35 +1,31 @@
-<h1>Listing notifications</h1>
+<% provide(:title, 'Notifications List') %>
+<% provide(:prev_page, 'Admin') %>
+<% provide(:prev_link, admin_path) %>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Action</th>
-      <th>Current plant</th>
-      <th>Time</th>
-      <th style="width: 20%"></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @notifications.each do |notification| %>
-      <tr>
-        <td><%= notification.user.username %></td>
-        <td><%= notification.action %></td>
-        <td><%= link_to notification.current_plant.name, notification.current_plant %></td>
-        <td><%= notification.created_at.to_s(:short) %></td>
-        <td></td>
-        <td><%= link_to 'Show', notification %></td>
-        <td><%= link_to 'Edit', edit_notification_path(notification) %></td>
-        <td><%= link_to 'Destroy', notification, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All Notifications<span class="item-counter">(<%= @notifications.count %>)</span></h1>
+		<%= link_to new_notification_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: -45px' do %>
+			<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> Notification</span>
+		<% end %>
+<hr/>
+
+
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th style="width: 5%">ID</th>
+			<th>Info</th>
+		  <th>Time</th>
+			<th style="width: 90px;" class="th-shrink"></th>
+		</tr>
+	</thead>
+	<tbody>
+		<%= render @notifications %>
+	</tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Notification', new_notification_path %>
+<div class="center-wrapper">
+	<div class="center-wrapper-inner">
+		<%= will_paginate @notifications, :container => false, :previous_label => '<i class="fa fa-chevron-circle-left"></i>&nbsp;Previous'.html_safe, :next_label => 'Next&nbsp;<i class="fa fa-chevron-circle-right"></i>'.html_safe, renderer: BootstrapPagination::Rails %>
+	</div>
+</div>
