--- a/plantsuwa/app/views/notifications/new.html.erb
+++ b/plantsuwa/app/views/notifications/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New notification</h1>
+<% provide(:title, 'New Notification') %>
+<% provide(:prev_page, 'Notifications') %>
+<% provide(:prev_link, notifications_path) %>
 
+<h1><span class="preceding-heading"><%= link_to 'Notifications', notifications_path %> <i class="fa fa-chevron-right"></i></span> New Notification</h1>
+<hr/>
+ 
 <%= render 'form' %>
-
-<%= link_to 'Back', notifications_path %>
