--- a/plantsuwa/app/views/origins/edit.html.erb
+++ b/plantsuwa/app/views/origins/edit.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Origin') %>
 <% provide(:prev_link, origins_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Origins', origins_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @origin.name %>'</h1>
+<h1><span class="preceding-heading"><%= link_to 'Origins', origins_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @origin.name %>'</h1>
 <hr/>
 
 <strong>Note that these changes will be applied to all plants with this origin.</strong>
