--- a/plantsuwa/app/views/origins/show.html.erb
+++ b/plantsuwa/app/views/origins/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @origin.name) %>
 <% provide(:prev_page, 'Origins') %>
-<% provide(:prev_link, origins_path) %> <!-- Change later -->
+<% provide(:prev_link, origins_path) %>
 
 
 	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Origins', origins_path %> <i class="fa fa-chevron-right"></i></span> <%= @origin.name %></h1>
