--- a/plantsuwa/app/views/sizes/new.html.erb
+++ b/plantsuwa/app/views/sizes/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Sizes') %>
 <% provide(:prev_link, sizes_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Sizes', sizes_path %> <i class="fa fa-chevron-right"></i></span> New Size</h1>
+<h1><span class="preceding-heading"><%= link_to 'Sizes', sizes_path %> <i class="fa fa-chevron-right"></i></span> New Size</h1>
 <hr/>
  
 <%= render 'form' %>
