--- a/plantsuwa/app/views/sizes/show.html.erb
+++ b/plantsuwa/app/views/sizes/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @size.name) %>
 <% provide(:prev_page, 'Sizes') %>
-<% provide(:prev_link, sizes_path) %> <!-- Change later -->
+<% provide(:prev_link, sizes_path) %>
 
 
 	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Sizes', sizes_path %> <i class="fa fa-chevron-right"></i></span> <%= @size.name %></h1>
