--- a/plantsuwa/app/views/soil_types/new.html.erb
+++ b/plantsuwa/app/views/soil_types/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Soil Types') %>
 <% provide(:prev_link, soil_types_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Soil Types', soil_types_path %> <i class="fa fa-chevron-right"></i></span> New Climate</h1>
+<h1><span class="preceding-heading"><%= link_to 'Soil Types', soil_types_path %> <i class="fa fa-chevron-right"></i></span> New Climate</h1>
 <hr/>
  
 <%= render 'form' %>
