--- a/plantsuwa/app/views/types/edit.html.erb
+++ b/plantsuwa/app/views/types/edit.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Types') %>
 <% provide(:prev_link, types_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @type.name %>'</h1>
+<h1><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @type.name %>'</h1>
 <hr/>
 
 <strong>Note that these changes will be applied to all plants with this type.</strong>
