--- a/plantsuwa/app/views/types/new.html.erb
+++ b/plantsuwa/app/views/types/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Types') %>
 <% provide(:prev_link, types_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> New Type</h1>
+<h1><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> New Type</h1>
 <hr/>
  
 <%= render 'form' %>
