--- a/plantsuwa/app/views/types/show.html.erb
+++ b/plantsuwa/app/views/types/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @type.name) %>
 <% provide(:prev_page, 'Types') %>
-<% provide(:prev_link, types_path) %> <!-- Change later -->
+<% provide(:prev_link, types_path) %>
 
 
 	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> <%= @type.name %></h1>
