--- a/plantsuwa/app/views/users/_form.html.erb
+++ b/plantsuwa/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(@user, html: { class: 'form-horizontal' }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
 
-  <%= f.input  :username %>
+  <%= f.input  :username, autofocus: true %>
   <%= f.input  :email %>
   <%= f.input  :password %>
   <%= f.input  :password_confirmation %>
