improved flow of admin pages (easier to make changes, as we only need to change one thing for every page to change).

--- a/plantsuwa/app/assets/stylesheets/admin-pages.css
+++ b/plantsuwa/app/assets/stylesheets/admin-pages.css
@@ -396,8 +396,8 @@ hr {
 
 
 .pagination > .active > span, .pagination > .active > span:hover {
-  background: #FFA81C;
-  border-color: #FFB300;
+  background: #EB9100;
+  border-color: #EB9100;
 }
 
 .pagination > .disabled > span, .pagination > .disabled > span:hover, .pagination > li > a {
