--- a/plantsuwa/app/views/climates/new.html.erb
+++ b/plantsuwa/app/views/climates/new.html.erb
@@ -5,4 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Climates', climates_path %> <i class="fa fa-chevron-right"></i></span> New Climate</h1>
 <hr/>
  
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @climate, object_name: 'climate'} %>
