--- a/plantsuwa/app/views/flower_colours/index.html.erb
+++ b/plantsuwa/app/views/flower_colours/index.html.erb
@@ -1,32 +1,3 @@
 <% provide(:title, 'Flower Colours List') %>
-<% provide(:prev_page, 'Admin') %>
-<% provide(:prev_link, admin_path) %>
 
-
-	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All Flower Colours<span class="item-counter">(<%= @flower_colours.count %>)</span></h1>
-	<%= link_to new_flower_colour_path, class: 'btn btn-orange button-shrink button-admin-new' do %>
-		<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> Colour</span>
-	<% end %>
-<hr/>
-
-
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th style="width: 5%">ID</th>
-			<th>Name</th>
-			<th style="width: 90px;" class="th-shrink"></th>
-			<th style="width: 90px;" class="th-shrink"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<%= render @flower_colours %>
-	</tbody>
-</table>
-
-<div class="center-wrapper">
-	<div class="center-wrapper-inner">
-		<%= will_paginate @flower_colours, :container => false, :previous_label => '<i class="fa fa-chevron-circle-left"></i>&nbsp;Previous'.html_safe, :next_label => 'Next&nbsp;<i class="fa fa-chevron-circle-right"></i>'.html_safe, renderer: BootstrapPagination::Rails %>
-	</div>
-</div>
-
+<%= render partial: 'admin_pages/generic_admin_index', locals: {objects: @flower_colours, new_object_path: new_flower_colour_path, title_name: 'Flower Colour', button_name: 'Colour'} %>
