--- a/plantsuwa/app/views/notifications/index.html.erb
+++ b/plantsuwa/app/views/notifications/index.html.erb
@@ -1,31 +1,3 @@
 <% provide(:title, 'Notifications List') %>
-<% provide(:prev_page, 'Admin') %>
-<% provide(:prev_link, admin_path) %>
 
-
-	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All Notifications<span class="item-counter">(<%= @notifications.count %>)</span></h1>
-		<%= link_to new_notification_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: -45px' do %>
-			<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> Notification</span>
-		<% end %>
-<hr/>
-
-
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th style="width: 5%">ID</th>
-			<th>Info</th>
-		  <th>Time</th>
-			<th style="width: 90px;" class="th-shrink"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<%= render @notifications %>
-	</tbody>
-</table>
-
-<div class="center-wrapper">
-	<div class="center-wrapper-inner">
-		<%= will_paginate @notifications, :container => false, :previous_label => '<i class="fa fa-chevron-circle-left"></i>&nbsp;Previous'.html_safe, :next_label => 'Next&nbsp;<i class="fa fa-chevron-circle-right"></i>'.html_safe, renderer: BootstrapPagination::Rails %>
-	</div>
-</div>
+<%= render partial: 'admin_pages/generic_admin_index', locals: {objects: @notifications, new_object_path: nil, title_name: 'Notification', button_name: nil} %>
