--- a/plantsuwa/app/views/origins/edit.html.erb
+++ b/plantsuwa/app/views/origins/edit.html.erb
@@ -5,6 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Origins', origins_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @origin.name %>'</h1>
 <hr/>
 
-<strong>Note that these changes will be applied to all plants with this origin.</strong>
-
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @origin, object_name: 'origin'} %>
