--- a/plantsuwa/app/views/origins/new.html.erb
+++ b/plantsuwa/app/views/origins/new.html.erb
@@ -5,4 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Origins', origins_path %> <i class="fa fa-chevron-right"></i></span> New Origin</h1>
 <hr/>
  
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @origin, object_name: 'origin'} %>
