--- a/plantsuwa/app/views/soil_types/edit.html.erb
+++ b/plantsuwa/app/views/soil_types/edit.html.erb
@@ -5,6 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Soil Types', soil_types_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @soil_type.name %>'</h1>
 <hr/>
 
-<strong>Note that these changes will be applied to all plants with this soil type.</strong>
-
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @soil_type, object_name: 'soil type'} %>
