--- a/plantsuwa/app/views/soil_types/new.html.erb
+++ b/plantsuwa/app/views/soil_types/new.html.erb
@@ -5,4 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Soil Types', soil_types_path %> <i class="fa fa-chevron-right"></i></span> New Climate</h1>
 <hr/>
  
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @soil_type, object_name: 'soil type'} %>
