--- a/plantsuwa/app/views/types/edit.html.erb
+++ b/plantsuwa/app/views/types/edit.html.erb
@@ -5,6 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @type.name %>'</h1>
 <hr/>
 
-<strong>Note that these changes will be applied to all plants with this type.</strong>
-
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @type, object_name: 'type'} %>
