--- a/plantsuwa/app/views/types/new.html.erb
+++ b/plantsuwa/app/views/types/new.html.erb
@@ -5,4 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Types', types_path %> <i class="fa fa-chevron-right"></i></span> New Type</h1>
 <hr/>
  
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @type, object_name: 'type'} %>
