added a plant index page to the admin interface. Still working on the show/edit/new etc pages for plants.  Then I have to make a photos page for the admin, then the admin stuff will be finally done.

--- a/plantsuwa/app/assets/stylesheets/admin-pages.css
+++ b/plantsuwa/app/assets/stylesheets/admin-pages.css
@@ -124,7 +124,11 @@ strong {
 
 
 table, .table > tbody > tr > td, .table > thead > tr > th, .table-responsive {
-	border: 0;
+	border: 0;  
+}
+
+.table > tbody > tr > td {
+  vertical-align: middle;
 }
 
 .table-striped>tbody>tr:nth-child(even)>td, 
