--- a/plantsuwa/app/views/admin_pages/_bottom_admin_bar_other_tables_list.html.erb
+++ b/plantsuwa/app/views/admin_pages/_bottom_admin_bar_other_tables_list.html.erb
@@ -20,7 +20,7 @@
 
 <% if controller_name != "current_plants" %>
   <li>
-      <%= link_to current_plants_path do %>
+      <%= link_to admin_plants_path do %>
       <i class="fa fa-tree"></i><span class="admin-list-name">&nbsp;Plants</span>
       <% end %>
   </li>
