--- a/plantsuwa/app/views/admin_pages/index.html.erb
+++ b/plantsuwa/app/views/admin_pages/index.html.erb
@@ -29,7 +29,7 @@
 		</div>
 	<% end %>
 
-	<%= link_to current_plants_path do %>
+	<%= link_to admin_plants_path do %>
 		<div class="admin-pages-column">
 			<div class="admin-pages-box apb-3">
 
@@ -177,7 +177,7 @@
 
 			<tr>
 				<td><i class="fa fa-tree"></i>
-				<td><%= link_to 'Plants', current_plants_path %></td>
+				<td><%= link_to 'Plants', admin_plants_path %></td>
 				<td><%= @current_plants_count %></td>
 			</tr>
 			<tr>
