--- a/plantsuwa/app/views/current_plants/_current_plant.html.erb
+++ b/plantsuwa/app/views/current_plants/_current_plant.html.erb
@@ -6,7 +6,7 @@
     <div class="center-wrapper">
       <div class="center-wrapper-inner">
         <%= link_to current_plant_path(current_plant) do %>
-          <p style="text-align: center; margin-bottom: 0px; font-size: 120%"><strong><%= truncate(current_plant.name, length: 20) %></strong></p>
+          <p style="text-align: center; margin-bottom: 0px; font-size: 120%"><strong><%= truncate(display_name(current_plant), length: 20) %></strong></p>
         <% end %>
 
         <% if !current_plant.scientific_name.blank? %>
