--- a/plantsuwa/app/views/sizes/new.html.erb
+++ b/plantsuwa/app/views/sizes/new.html.erb
@@ -5,4 +5,4 @@
 <h1><span class="preceding-heading"><%= link_to 'Sizes', sizes_path %> <i class="fa fa-chevron-right"></i></span> New Size</h1>
 <hr/>
  
-<%= render 'form' %>
+<%= render partial: 'admin_pages/generic_admin_form', locals: {object: @size, object_name: 'size'} %>
