--- a/plantsuwa/app/views/climates/show.html.erb
+++ b/plantsuwa/app/views/climates/show.html.erb
@@ -1,20 +1,6 @@
 <% provide(:title, @climate.name) %>
-<% provide(:prev_page, 'Climates') %>
-<% provide(:prev_link, climates_path) %>
 
-
-	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Climates', climates_path %> <i class="fa fa-chevron-right"></i></span> <%= @climate.name %></h1>
-		<div class="btn-group">
-
-			<%= link_to edit_climate_path(@climate), class: 'btn-top btn btn-orange button-shrink', style: 'float: left;' do %>
-				<i class="fa fa-edit"></i><span class="over-500">&nbsp;&nbsp;Edit</span>
-			<% end %>
-			<%= link_to climate_path(@climate), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this climate? Doing so will affect all plants with this climate!'}, class: 'btn-top btn btn-orange button-shrink', style: 'float: right;' do %>
-				<i class="fa fa-trash-o"></i><span class="over-500">&nbsp;&nbsp;Delete</span>
-			<% end %>
-
-		</div>
-<hr/>
+<%= render partial: 'admin_pages/generic_admin_show', locals: {object: @climate, objects_path: climates_path, edit_object_path: edit_climate_path(@climate), object_path: climate_path(@climate), object_prevpage: 'Climates', object_name: 'climate', object_has_colour: false } %>
 
 <p>Plants that are '<%= @climate.name %>':</p>
 <%= render 'admin_pages/plants_table' %>
