--- a/plantsuwa/app/views/admin_pages/_generic_admin_index_header.html.erb
+++ b/plantsuwa/app/views/admin_pages/_generic_admin_index_header.html.erb
@@ -1,10 +1,16 @@
 <% provide(:prev_page, 'Admin') %>
 <% provide(:prev_link, admin_path) %>
 
-<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All <%= title_name %>s<span class="item-counter">(<%= objects.count %>)</span></h1>
-<% if new_object_path %>
-	<%= link_to new_object_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: -45px' do %>
-		<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> <%= button_name %></span>
-	<% end %>
-<% end %>
+<div class="row">
+	<div class="col-xs-10">
+		<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Admin', admin_path %> <i class="fa fa-chevron-right"></i></span> All <%= title_name %>s<span class="item-counter">(<%= objects.count %>)</span></h1>
+	</div>
+	<div class="col-xs-2">
+		<% if new_object_path %>
+			<%= link_to new_object_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: 25px' do %>
+				<i class="fa fa-plus"></i>&nbsp;&nbsp;New<span class="over-350"> <%= button_name %></span>
+			<% end %>
+		<% end %>
+	</div>
+</div>
 <hr/>
