--- a/plantsuwa/app/views/admin_pages/_generic_admin_pagination.html.erb
+++ b/plantsuwa/app/views/admin_pages/_generic_admin_pagination.html.erb
@@ -1,5 +1,11 @@
+<div class="center-wrapper pagination-info">
+	<div class="center-wrapper-inner">	
+		<%= page_entries_info objects %>
+	</div>
+</div>
+
 <div class="center-wrapper">
-	<div class="center-wrapper-inner">
-		<%= will_paginate objects, :container => false, :previous_label => '<i class="fa fa-chevron-circle-left"></i>&nbsp;Previous'.html_safe, :next_label => 'Next&nbsp;<i class="fa fa-chevron-circle-right"></i>'.html_safe, renderer: BootstrapPagination::Rails %>
+	<div class="center-wrapper-inner">		
+		<%= will_paginate objects, :container => false, :previous_label => '<i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous'.html_safe, :next_label => 'Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i>'.html_safe, renderer: BootstrapPagination::Rails %>
 	</div>
 </div>
