--- a/plantsuwa/app/views/current_plants/index_admin.html.erb
+++ b/plantsuwa/app/views/current_plants/index_admin.html.erb
@@ -5,17 +5,15 @@
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th style="width: 40px">ID</th>
-			<th style="width: 40px">ID</th>
+			<th style="width: 50px">ID</th>
+			<th style="width: 40px"></th>
 			<th>Name</th>
 			<th style="width: 90px;" class="th-shrink"></th>
 			<th style="width: 90px;" class="th-shrink"></th>
 		</tr>
 	</thead>
 	<tbody>
-		<% @current_plants.each do |p| %>
-			<%= render partial: 'current_plant_admin', locals: {current_plant: p} %>
-		<% end %>
+		<%= render partial: "current_plant_admin", collection: @current_plants, as: :current_plant %>
 	</tbody>
 </table>
 <%= render partial: 'admin_pages/generic_admin_pagination', locals: {objects: @current_plants} %>
