--- a/plantsuwa/app/views/flower_colours/show.html.erb
+++ b/plantsuwa/app/views/flower_colours/show.html.erb
@@ -1,20 +1,6 @@
 <% provide(:title, @flower_colour.name) %>
-<% provide(:prev_page, 'Flower Colours') %>
-<% provide(:prev_link, flower_colours_path) %>
 
-
-	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Flower Colours', flower_colours_path %> <i class="fa fa-chevron-right"></i></span> <div class="colour-circle circle-large" style="background: <%= to_colour(@flower_colour) %>"></div><%= @flower_colour.name %></h1>
-		<div class="btn-group">
-
-			<%= link_to edit_flower_colour_path(@flower_colour), class: 'btn-top btn btn-orange button-shrink', style: 'float: left;' do %>
-				<i class="fa fa-edit"></i><span class="over-500">&nbsp;&nbsp;Edit</span>
-			<% end %>
-			<%= link_to flower_colour_path(@flower_colour), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this flower colour? Doing so will affect all plants with this flower colour!'}, class: 'btn-top btn btn-orange button-shrink', style: 'float: right;' do %>
-				<i class="fa fa-trash-o"></i><span class="over-500">&nbsp;&nbsp;Delete</span>
-			<% end %>
-
-		</div>
-<hr/>
+<%= render partial: 'admin_pages/generic_admin_show', locals: {object: @flower_colour, objects_path: flower_colours_path, edit_object_path: edit_flower_colour_path(@flower_colour), object_path: flower_colour_path(@flower_colour), object_prevpage: 'F. Colours', object_name: 'flower colour', object_has_colour: true }  %>
 
 <p>Plants that are '<%= @flower_colour.name %>':</p>
 <%= render 'admin_pages/plants_table' %>
