--- a/plantsuwa/app/views/leaf_colours/show.html.erb
+++ b/plantsuwa/app/views/leaf_colours/show.html.erb
@@ -1,20 +1,6 @@
 <% provide(:title, @leaf_colour.name) %>
-<% provide(:prev_page, 'Leaf Colours') %>
-<% provide(:prev_link, leaf_colours_path) %> <!-- Change later -->
 
-
-	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> <div class="colour-circle circle-large" style="background: <%= to_colour(@leaf_colour) %>"></div><%= @leaf_colour.name %></h1>
-		<div class="btn-group">
-
-			<%= link_to edit_leaf_colour_path(@leaf_colour), class: 'btn-top btn btn-orange button-shrink', style: 'float: left;' do %>
-				<i class="fa fa-edit"></i><span class="over-500">&nbsp;&nbsp;Edit</span>
-			<% end %>
-			<%= link_to leaf_colour_path(@leaf_colour), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this leaf colour? Doing so will affect all plants with this leaf colour!'}, class: 'btn-top btn btn-orange button-shrink', style: 'float: right;' do %>
-				<i class="fa fa-trash-o"></i><span class="over-500">&nbsp;&nbsp;Delete</span>
-			<% end %>
-
-		</div>
-<hr/>
+<%= render partial: 'admin_pages/generic_admin_show', locals: {object: @leaf_colour, objects_path: leaf_colours_path, edit_object_path: edit_leaf_colour_path(@leaf_colour), object_path: leaf_colour_path(@leaf_colour), object_prevpage: 'L. Colours', object_name: 'leaf colour', object_has_colour: true } %>
 
 <p>Plants that are '<%= @leaf_colour.name %>':</p>
 <%= render 'admin_pages/plants_table' %>
