--- a/plantsuwa/app/views/users/_form_admin.html.erb
+++ b/plantsuwa/app/views/users/_form_admin.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@user, html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+<%= simple_form_for(@user, :url => url_for(:action => form_action), html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
   <% if @user.errors.any? %>
   <div id="error_explanation">
     <br/>
