--- a/plantsuwa/app/views/users/index.html.erb
+++ b/plantsuwa/app/views/users/index.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, 'Users List') %>
 
-<%= render partial: 'admin_pages/generic_admin_index', locals: {objects: @users, new_object_path: nil, title_name: 'User', button_name: nil} %>
+<%= render partial: 'admin_pages/generic_admin_index', locals: {objects: @users, new_object_path: admin_new_user_path, title_name: 'User', button_name: 'User'} %>
